tests/invalid/missing_function_paren.ar
fn main( {
    let i: u8;
}
